app/assets/stylesheets/application.css
/*
 *= require_tree .
 *= require_self
 *= require foundation_and_overrides
*/

.flash-container {
  padding: 10px;
  color: white;
  background: #cc3d3d;
  font-weight: bold;
  text-align: center;
  margin-bottom: 20px;
}

.side-nav {
  margin:0px;
}

.sidebar {
  background: white;
  padding: 0px;
  padding-left: 25px;
  padding-right: 25px;
  padding-top: 100px;
  height: 100%;
  position: fixed;
  z-index: 1;
  transition: all 0.5s;
  width: 250px;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
  display: flex;
  align-items: center;
}

.top-link b {
  color: #439B4F;
  margin: auto;
  transition: color 0.25s, ease;
}

.top-link b:hover {
  color: black;
  transition: color 0.25s, ease;
}

.sidebar.smaller {
  padding-top: 50px;
  transition: all 0.5s;
}

.sidebar a {
  transition: color 0.25s, ease;
  font-size: .8em;
  color: black;
}

.sidebar a:hover {
  transition: color 0.25s, ease;
  color: #439B4F;
}

.sidebar hr {
  margin-right: 20px;
}

.top-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #439B4F;
  height: 100px;
  width: 100%;
  text-align: center;
  position: fixed;
  z-index: 100;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
  transition: all 0.5s ease;
}

.hours {
  opacity: 1;
  width: 20%;
  color: white;
  text-align: left;
  margin-left: 20px;
  transition: all 0.5s ease;
  text-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
}

.hours.smaller {
  opacity: 0;
  transition: all 0.5s ease;
}

.top-header img {
  height: 90px;
  transition: all 0.5s;
}

.top-header.smaller {
  height: 50px;
}

.top-header.smaller h1 {
  font-size: 2em;
  text-shadow: none;
}

.top-header.smaller img {
  height: 45px;
  transition: all 0.5s;
}

.main {
  padding: 20px;
  padding-top: 120px;
}

.category-title {
  text-align: center;
}

.category-product {
  text-align: center;
  margin-bottom: 20px;
  transition: all 0.1s, ease;
  height: 27vh;
  padding: 5px;
}

.product-row a {
  transition: all 0.1s, ease;
  font-size: .8em;
  color: black;
}

.product-thumbnail {
  width: 100%;
  height: 80%;
  background-color: white;
  margin-bottom: 10px;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
}

.design-your-own {
  display: flex;
  width: 100%;
  height: 80%;
  background-color: #439B4F;;
  color: white;
  margin-bottom: 10px;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
  text-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
  justify-content: center;
  align-items: center;
}

.icon {
  margin: 10px;
  text-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
}

.view-more {
  background: #439B4F;
  border-radius: 2px;
}

.product-text {
  text-align: center;
}

.product-description {
  font-family: 'Biryani', sans-serif;
  height: 350px;
  font-weight: bold;
  font-size: 16px;
  background-color: white;
  padding: 30px;
  text-align: left;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
}

.product-description h2 {
  color: #439B4F;
  font-size: 24px;
  white-space: pre-wrap;
  font-weight: bold;
  margin: 0;
}

.product-description h3 {
  color: black;
  white-space: pre-wrap;
  font-weight: bold;
  margin: 0;
}

.product-description p {
  font-size: .8em;
  white-space: pre-wrap;
  margin-top: 20px;
}

.edit-product-image {
  /*padding: 5px;*/
  height: 350px;
  display: flex;
  justify-content: center;
}

.edit-product-image img {
  max-height: 100%;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
}

.builder-title {
  text-align: center;
  color: #439B4F;
  font-size: 24px;
  white-space: pre-wrap;
  font-weight: bold;
  margin-top: 10px;
}

.pricing {
  display: block;
  margin: auto;
  text-align: center;
}

#homepage {
  display: flex;
  flex-wrap: wrap;
}

.image-text {
  font-size: 1.2em;
  padding: 5px;
  opacity: 1;
  text-align: center;
  background: #439B4F;
  color: white;
}

.homepage-image {
  opacity: 1;
  width: 23em;
  height: 40vh;
  border: 1px solid #439B4F;
  margin: 15px;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
  transition: all 0.1s, ease;
  text-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
 }

 .homepage-image:hover {
   box-shadow: 0 4px 10px rgba(0,0,0,0.1), 0 4px 10px rgba(0,0,0,0.2);
   transition: all 0.1s, ease;
 }

.delete-link a {
  color: #cc3d3d;
}

.color-div {
  margin-bottom: 0px;
  width: 9%;
  display: inline-block;
  justify-content: space-between;
  padding-left: 10px;
  padding-right: 10px;
}

.color-div h4 {
  font-size: .8em;
  display: inline-flex;
}

.color-image {
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
  transition: all 0.1s, ease;
}

.color-image:hover {
  box-shadow: 0 4px 10px rgba(0,0,0,0.1), 0 4px 10px rgba(0,0,0,0.2);
  transition: all 0.1s, ease;
}

.unfinished-pricing-table {
  font-size: .8em;
  margin-top: 15px;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1), 0 2px 5px rgba(0,0,0,0.2);
  margin-bottom: 20px;
}

.unfinished-pricing-table th {
  background-color: #439B4F;
  color: white;
}

.finishes {
  /*display: flex;*/
  justify-content: space-between;
  text-align: center;
}

